// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api-servers return errors if servers is an empty array  1`] = `
Array [
  Object {
    "code": "api-servers",
    "message": "should NOT have fewer than 1 items",
    "path": Array [
      "servers",
    ],
    "range": Object {
      "end": Object {
        "character": -1,
        "line": -1,
      },
      "start": Object {
        "character": -1,
        "line": -1,
      },
    },
    "severity": 1,
  },
]
`;

exports[`api-servers return errors if servers is missing  1`] = `
Array [
  Object {
    "code": "api-servers",
    "message": "servers does not exist",
    "path": Array [
      "servers",
    ],
    "range": Object {
      "end": Object {
        "character": -1,
        "line": -1,
      },
      "start": Object {
        "character": -1,
        "line": -1,
      },
    },
    "severity": 1,
  },
]
`;
